--- a/home.css
+++ b/home.css
@@ -43,17 +43,17 @@ body {
 /*// Background image //*/
 .banner {
   position: fixed;
-  top: 48px;
-  left: 0;
-  text-align: center;
+  top: 0px;
+  background: url(images/header.png);
+  background-size: 100% 100%;
+  height: 100vh;
   width: 100%;
-  height: 614px;
 }
 
 /*// MAIN //*/
 .body {
   position: relative;
-  top: 610px;
+  top: calc(100vh - 58px);
   background: rgba(0,0,0,0.6);
   height: 500px;
   width: 100%;
@@ -126,6 +126,8 @@ body {
   text-align: center;
   clear: none;
   height: 1080px;
+  overflow: auto;
+  margin-bottom: 20px;
 }
 .obs {
   color: #bbb;
@@ -146,8 +148,8 @@ body {
 /* skills */
 .skills {
   float: left;
-  width: 30%;
-  margin: 20px;
+  width: 30vw;
+  margin: 10px 0px 0px 10px;
   background-color: #fff;
   text-align: left;
   padding: 20px 32px;
@@ -161,8 +163,8 @@ body {
   list-style-type: none;
 }
 .skills:hover {
-  border-top: 25px solid #111;
-  border-left: 25px solid #111;
+  border-top: 22px solid #111;
+  border-left: 22px solid #111;
   border-radius: 80px;
   padding: 30px 40px;
 }
@@ -207,8 +209,8 @@ body {
 /*personal*/
 .personal {
   float: right;
-  width: 50%;
-  margin: 20px;
+  width: 50vw;
+  margin: 10px 10px 10px 0;
   background-color: #fff;
   padding: 20px 32px;
   border-radius: 50px;
@@ -232,20 +234,21 @@ body {
   margin-left: 40px;
 }
 .personal:hover {
-  border-top: 25px solid #111;
-  border-right: 25px solid #111;
+  border-top: 22px solid #111;
+  border-right: 22px solid #111;
   border-radius: 80px;
   padding: 30px 40px;
 }
 /*career*/
 .career {
   float: right;
-  width: 50%;
-  margin: 20px;
+  overflow: auto;
+  width: 50vw;
+  margin: 0 10px 0 0;
   background-color: #fff;
   padding: 20px 32px;
   border-radius: 50px;
-  border-bottom: 10px solid #333;
+  border-top: 10px solid #333;
   border-right: 10px solid #333;
   transition: 2s ease;
 }
@@ -253,8 +256,8 @@ body {
   margin: 10px;
 }
 .career:hover {
-  border-bottom: 25px solid #111;
-  border-right: 25px solid #111;
+  border-top: 22px solid #111;
+  border-right: 22px solid #111;
   border-radius: 80px;
   padding: 30px 40px;
 }
@@ -263,9 +266,7 @@ body {
 }
 
 /*// Portifolio //*/
-.portifolio {
 
-}
 
 /*// CONTACT //*/
 .contact {
@@ -323,6 +324,8 @@ footer {
   color: white;
   position: relative;
   bottom: -610px;
+  width: 100%;
+  height: 300px;
 }
 
 
