--- a/home.css
+++ b/home.css
@@ -19,15 +19,29 @@ body {
   padding: 8px 16px;
   z-index: 1;
   overflow: hidden;
-  letter-spacing: 4px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.bar-title {
+  letter-spacing: 4px;
+  padding: 8px 16px;
+  float: left;
+  color: #fff;
+  user-select: none;
 }
 .bar-item {
   padding: 8px 16px;
   float: left;
   color: #fff;
   user-select: none;
-  vertical-align: middle;
+  letter-spacing: 2px;
+}
+.bar-item-disabled {
+  cursor: initial;
+  padding: 8px 16px;
+  float: left;
+  color: rgba(255, 255, 255, 0.555);
+  user-select: none;
+  letter-spacing: 2px;
 }
 .items-right {
   float: right;
@@ -38,6 +52,7 @@ body {
 .bar-item:hover {
   color: #000;
   background-color: #ccc;
+  border-radius: 4px;
 }
 
 /*// Background image //*/
@@ -94,6 +109,11 @@ body {
   border-top: 20px solid #333;
   border-radius: 35%;
   margin-bottom: 30px;
+}
+.category-disabled {
+  background: rgba(255, 255, 255, 0.8);
+  height: 300px;
+  width: 17%;
 }
 .category img {
   margin: 14px;
