--- a/home.css
+++ b/home.css
@@ -165,7 +165,7 @@ body {
 .skills {
   grid-column: 2 / span 2;
   grid-row: 1 / span 3;
-  width: 100%;
+  padding: 4px 16px;
   background-color: #fff;
   text-align: left;
   border-radius: 16px;
@@ -197,12 +197,17 @@ body {
   border-radius: 20px;
   margin-left: 0;
 }
+.li-icon-container {
+  width: 28px;
+  overflow: hidden;
+  display: inline;
+}
 .li-icon {
-  margin: 0px 4px 0px 1px;
+  margin: 0px auto;
   padding: 1px;
   display: inline;
-  width: auto ;
-  height: 10px;
+  width: auto;
+  height: 12px;
 }
 .li-icon2 {
   margin: 0px 4px -5px 0px;
@@ -275,6 +280,8 @@ body {
 }
 .d-flex {
   display: flex;
+}
+.d-flex-center {
   justify-content: center;
   flex-wrap: wrap;
 }
