--- a/home.css
+++ b/home.css
@@ -54,6 +54,96 @@ body {
   border-radius: 4px;
 }
 
+/* Language button */
+.lang-menu {
+	max-width: 124px;
+	text-align: right;
+	position: relative;
+	padding: 2px 16px;
+}
+.lang-menu .selected-lang {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	line-height: 2;
+	cursor: pointer;
+}
+.lang-menu .selected-lang-en:before {
+	content: '';
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	margin-right: 8px;
+	background-image: url(https://www.countryflags.io/us/flat/24.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+.lang-menu .selected-lang-br:before {
+	content: '';
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	margin-right: 8px;
+	background-image: url(https://www.countryflags.io/br/flat/24.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.lang-menu ul {
+	margin: 0;
+	padding: 0;
+	display: none;
+	background-color: #fff;
+	border: 1px solid #f8f8f8;
+	position: absolute;
+	top: 36px;
+	right: 0px;
+	width: 160px;
+	border-radius: 5px;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+}
+
+
+.lang-menu ul li {
+	list-style: none;
+	text-align: left;
+	display: flex;
+	justify-content: space-between;
+}
+
+.lang-menu ul li a {
+	text-decoration: none;
+	width: 160px;
+	padding: 5px 10px;
+	display: block;
+}
+
+.lang-menu ul li:hover {
+	background-color: #f2f2f2;
+}
+
+.lang-menu ul li a:before {
+	content: '';
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	vertical-align: middle;
+	margin-right: 10px;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.en:before {
+	background-image: url(https://www.countryflags.io/us/flat/24.png);
+}
+.br:before {
+	background-image: url(https://www.countryflags.io/br/flat/24.png);
+}
+
+.lang-menu:hover ul {
+	display: block;
+}
+
 /*// Background image //*/
 .banner {
   position: fixed;
@@ -319,14 +409,16 @@ footer {
   height: 300px;
 }
 
+/*// UTILS //*/
+.m-0 {
+	margin: 0;
+}
 
 /*// KEYFRAMES //*/
 
 
 
-
 /*// RESPONSIVENESS //*/
-
 @media only screen and (max-width: 767px) {
 
   .grid-container {
