--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -25,7 +25,7 @@
   }
 }
 
-$background: #f7f7f7;
+$background: #00000000;
 $box-shadow: 0px 1px 22px 4px rgba(0, 0, 0, 0.07);
 $border: 1px solid rgba(191, 191, 191, 0.4);
 $items: 4;
@@ -102,10 +102,8 @@ body {
 }
 
 #timeline {
-  padding: 100px 0;
+  padding: 16px 0;
   background: $background;
-  border-top: $border;
-  border-bottom: $border;
   h1 {
     text-align: center;
     font-size: 3rem;
